Update examples to pass external SCIM testing