@@ -19,38 +19,40 @@
 
 package org.apache.directory.scim.example.jersey.service;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
+import jakarta.ws.rs.core.Response;
 import org.apache.directory.scim.example.jersey.extensions.LuckyNumberExtension;
+import org.apache.directory.scim.server.exception.UnableToCreateResourceException;
 import org.apache.directory.scim.server.exception.UnableToUpdateResourceException;
 import org.apache.directory.scim.server.repository.Repository;
 import org.apache.directory.scim.server.repository.UpdateRequest;
+import org.apache.directory.scim.server.schema.SchemaRegistry;
+import org.apache.directory.scim.spec.protocol.filter.FilterExpressions;
 import org.apache.directory.scim.spec.protocol.filter.FilterResponse;
 import org.apache.directory.scim.spec.protocol.search.Filter;
 import org.apache.directory.scim.spec.protocol.search.PageRequest;
 import org.apache.directory.scim.spec.protocol.search.SortRequest;
-import org.apache.directory.scim.spec.resources.Email;
-import org.apache.directory.scim.spec.resources.ScimExtension;
-import org.apache.directory.scim.spec.resources.ScimResource;
-import org.apache.directory.scim.spec.resources.ScimUser;
+import org.apache.directory.scim.spec.resources.*;
 
 /**
  * Creates a singleton (effectively) Repository<ScimUser> with a memory-based
  * persistence layer.
- * 
+ *
  * @author Chris Harm &lt;crh5255@psu.edu&gt;
  */
 @Named
 @ApplicationScoped
 public class InMemoryUserService implements Repository<ScimUser> {
-  
+
   static final String DEFAULT_USER_ID = "1";
   static final String DEFAULT_USER_EXTERNAL_ID = "e" + DEFAULT_USER_ID;
   static final String DEFAULT_USER_DISPLAY_NAME = "User " + DEFAULT_USER_ID;
@@ -58,8 +60,17 @@ public class InMemoryUserService implements Repository<ScimUser> {
   static final String DEFAULT_USER_EMAIL_TYPE = "work";
   static final int DEFAULT_USER_LUCKY_NUMBER = 7;
 
-  private Map<String, ScimUser> users = new HashMap<>();
-  
+  private final Map<String, ScimUser> users = new HashMap<>();
+
+  private SchemaRegistry schemaRegistry;
+
+  @Inject
+  public InMemoryUserService(SchemaRegistry schemaRegistry) {
+    this.schemaRegistry = schemaRegistry;
+  }
+
+  protected InMemoryUserService() {}
+
   @PostConstruct
   public void init() {
     ScimUser user = new ScimUser();
@@ -67,18 +78,21 @@ public class InMemoryUserService implements Repository<ScimUser> {
     user.setExternalId(DEFAULT_USER_EXTERNAL_ID);
     user.setUserName(DEFAULT_USER_EXTERNAL_ID);
     user.setDisplayName(DEFAULT_USER_DISPLAY_NAME);
+    user.setName(new Name()
+      .setGivenName("Tester")
+      .setFamilyName("McTest"));
     Email email = new Email();
     email.setDisplay(DEFAULT_USER_EMAIL_VALUE);
     email.setValue(DEFAULT_USER_EMAIL_VALUE);
     email.setType(DEFAULT_USER_EMAIL_TYPE);
     email.setPrimary(true);
-    user.setEmails(Arrays.asList(email));
-    
+    user.setEmails(List.of(email));
+
     LuckyNumberExtension luckyNumberExtension = new LuckyNumberExtension();
     luckyNumberExtension.setLuckyNumber(DEFAULT_USER_LUCKY_NUMBER);
-    
+
     user.addExtension(luckyNumberExtension);
-    
+
     users.put(user.getId(), user);
   }
 
@@ -91,7 +105,7 @@ public class InMemoryUserService implements Repository<ScimUser> {
    * @see Repository#create(ScimResource)
    */
   @Override
-  public ScimUser create(ScimUser resource) {
+  public ScimUser create(ScimUser resource) throws UnableToCreateResourceException {
     String resourceId = resource.getId();
     int idCandidate = resource.hashCode();
     String id = resourceId != null ? resourceId : Integer.toString(idCandidate);
@@ -100,8 +114,17 @@ public class InMemoryUserService implements Repository<ScimUser> {
       id = Integer.toString(idCandidate);
       ++idCandidate;
     }
-    users.put(id, resource);
+
+    // check to make sure the user doesn't already exist
+    boolean existingUserFound = users.values().stream()
+      .anyMatch(user -> user.getUserName().equals(resource.getUserName()));
+    if (existingUserFound) {
+      // HTTP leaking into data layer
+      throw new UnableToCreateResourceException(Response.Status.CONFLICT, "User '" + resource.getUserName() + "' already exists.");
+    }
+
     resource.setId(id);
+    users.put(id, resource);
     return resource;
   }
 
@@ -137,7 +160,19 @@ public class InMemoryUserService implements Repository<ScimUser> {
    */
   @Override
   public FilterResponse<ScimUser> find(Filter filter, PageRequest pageRequest, SortRequest sortRequest) {
-    return new FilterResponse<>(users.values(), pageRequest, users.size());
+
+    long count = pageRequest.getCount() != null ? pageRequest.getCount() : users.size();
+    long startIndex = pageRequest.getStartIndex() != null
+      ? pageRequest.getStartIndex() - 1 // SCIM is 1-based indexed
+      : 0;
+
+    List<ScimUser> result = users.values().stream()
+      .skip(startIndex)
+      .limit(count)
+      .filter(FilterExpressions.inMemory(filter, schemaRegistry.getSchema(ScimUser.SCHEMA_URI)))
+      .collect(Collectors.toList());
+
+    return new FilterResponse<>(result, pageRequest, result.size());
   }
 
   /**
@@ -145,7 +180,6 @@ public class InMemoryUserService implements Repository<ScimUser> {
    */
   @Override
   public List<Class<? extends ScimExtension>> getExtensionList() {
-    return Arrays.asList(LuckyNumberExtension.class);
+    return List.of(LuckyNumberExtension.class);
   }
-
 }
